--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "5.17.0",
     "@tanstack/react-query": "^5.51.0",
     "@uploadcare/upload-client": "^6.0.0",
     "autoprefixer": "^10.4.18",
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.7",
     "zod": "^3.23.8"
+    "prisma": "5.17.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -37,5 +38,6 @@
     "typescript": "^5.6.2"
   }
 }
+
 
 
