--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "5.22.0",
     "@tanstack/react-query": "^5.51.0",
     "@uploadcare/upload-client": "^6.0.0",
     "autoprefixer": "^10.4.18",
@@ -38,4 +38,5 @@
     "typescript": "^5.6.2"
   }
 }
+
 
