--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "baseUrl": ".",
     "paths": { "@/*": ["./*"] }
   },
+  
+  "compilerOptions": {
+    "typeRoots": ["./types", "./node_modules/@types"]
+}
+
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
+
