--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
+// tsconfig.json
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
+}
 {
   "compilerOptions": {
     "target": "es2017",
@@ -22,3 +31,4 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
+
