--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-// File: tsconfig.json
 {
   "compilerOptions": {
     "target": "es2017",
@@ -17,29 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
-
-// File: src/lib/db.ts
-import { PrismaClient } from "@prisma/client";
-
-const globalForPrisma = globalThis as unknown as {
-  prisma: PrismaClient | undefined;
-};
-
-export const prisma =
-  globalForPrisma.prisma ??
-  new PrismaClient({
-    log: ["query"]
-  });
-
-if (process.env.NODE_ENV !== "production") globalForPrisma.prisma = prisma;
-
-// File: src/lib/auth.ts
-import { auth as nextAuth } from "@clerk/nextjs/server";
-
-export const auth = () => nextAuth();
