--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "postbuild": "prisma db push && tsx prisma/seed.ts",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -38,5 +39,3 @@
     "typescript": "^5.6.2"
   }
 }
-
-
