--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/first-run.cjs && next dev",
-    "build": "next build",
+    "build:prod": "node ./scripts/strip-bom.mjs && npx prisma generate && npx prisma db push && npx tsx prisma/seed.ts && next build",
+    "build:preview": "node ./scripts/strip-bom.mjs && npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "postbuild": "prisma db push && tsx prisma/seed.ts",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -39,3 +39,4 @@
     "typescript": "^5.6.2"
   }
 }
+
