--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/first-run.cjs && next dev",
-   "scripts": {
-  "build:prod": "node ./scripts/strip-bom.mjs && npx prisma generate && npx prisma db push && npx tsx prisma/seed.ts && next build",
-  "build:preview": "node ./scripts/strip-bom.mjs && npx prisma generate && next build"
+    "build:prod": "node ./scripts/strip-bom.mjs && npx prisma generate && npx prisma db push && npx tsx prisma/seed.ts && next build",
+    "build:preview": "node ./scripts/strip-bom.mjs && npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
@@ -40,5 +39,3 @@
     "typescript": "^5.6.2"
   }
 }
-
-
